Refactor DTO and other update